#6380 closed defect (fixed)
incorrect ULs when creating MXF with DNxHD
| Reported by: | Markus P Schumann | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | undetermined |
| Version: | unspecified | Keywords: | MXF, DNxHD |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | no |
Description
Summary of the bug:
Use any audio/video file and transcode to MXF with DNxHD video.
Ffmpeg uses the incorrect ULs for the essence container and and essence element.
correct essence container = MXF-GC Frame-wrapped VC-3 Pictures:
06 0E 2B 34 04 01 01 0A 0D 01 03 01 02 11 01 00
incorrect by ffmpeg: essence container = wrong version number (byte 8):
06 0E 2B 34 04 01 01 01 0D 01 03 01 02 11 01 00
correct essence element = MXF_GC_VC3_FRAME_PICTURE_ELEMENT:
06 0E 2B 34 01 02 01 0A 0D 01 03 01 15 01 0C 00
incorrect ffmepg essence element = MXF_GC_MPEG_FRAME_PICTURE_ELEMENT:
06 0E 2B 34 01 02 01 01 0D 01 03 01 15 01 05 00
see SMPTE ST 2019-4:2016; 6.1 Essence Element Key; Table 1 – Key Value for the VC-3 Picture Element (page 6)
How to reproduce:
ffmpeg.exe -i any_a_v_file.mp4 -vcodec dnxhd -vf "scale=1280:720" -b:v 75M -ar 48000 ffmpeg_dnxhd_output.mxf Y:\tools\ffmpeg-3.3>ffmpeg_g.exe -version ffmpeg version N-85950-g8ef2c79 Copyright (c) 2000-2017 the FFmpeg developers built with Microsoft (R) C/C++ Optimizing Compiler Version 18.00.40629 for x86 configuration: --optflags=-Od --disable-asm --disable-yasm --arch=i386 --disable-avdevice --disable-ffserver --disable-doc --enable-static --disable-bzlib --dis able-libopenjpeg --disable-iconv --disable-zlib --prefix=/c/ffmpeg --toolchain=msvc libavutil 55. 61.100 / 55. 61.100 libavcodec 57. 94.101 / 57. 94.101 libavformat 57. 72.101 / 57. 72.101 libavfilter 6. 88.100 / 6. 88.100 libswscale 4. 7.101 / 4. 7.101 libswresample 2. 8.100 / 2. 8.100
Patches should be submitted to the ffmpeg-devel mailing list and not this bug tracker.
Change History (3)
comment:1 by , 9 years ago
comment:2 by , 9 years ago
| Resolution: | → needs_more_info |
|---|---|
| Status: | new → closed |
Looks like OP is not interested in fixing this issue.
comment:3 by , 5 years ago
| Resolution: | needs_more_info → fixed |
|---|
Fixed in dd7c0bc4f981f7113d7bef267cc1eca8d9fb10f1.



Replying to go4shoe:
How can I reproduce this?
Which software fails for the produced files but succeeds if the values are changed?
Has this value ever changed?
Since I don't have access to the mentioned SMTP document, I suggest you send a patch made with
git format-patchto the FFmpeg development mailing list.